--- a/index.html
+++ b/index.html
@@ -52,7 +52,42 @@
     </header>
     <main class="content">
         <section class="home">
+            
+            <div class="shape"></div>
 
+            <div class="cta">
+                <h1 class="title">O sabor que vai até <span>você</span></h1>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam soluta, magni
+                    tempora quae excepturi </p>
+
+                <div class="cta-buttons">
+                    <a href="" class="btn-default">Ver cardápio</a>
+                    <a href="tel:+55(61) 995861805" id="phone_button">
+                        <button class="btn-default">
+                            <i class="fa-solid fa-phone"></i>
+                        </button>
+                        (61) 995861805
+                    </a>
+                </div>
+
+                <div class="social-medias-buttons">
+                    <a href="#">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+
+                    <a href="#">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+
+                    <a href="#">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="banner">
+                <img src="./img/hero.png" alt="">
+            </div>
         </section>
     </main>
     <script src="./script.js"></script>
