--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <main class="content">
         <section class="home">
-            
+
             <div class="shape"></div>
 
             <div class="cta">
@@ -87,6 +87,111 @@
 
             <div class="banner">
                 <img src="./img/hero.png" alt="">
+            </div>
+        </section>
+
+        <section class="menu">
+            <h1 class="menu-title">Cardápio</h1>
+            <h2 class="menu-subtitle">Nossos pratos especiais</h2>
+            <div class="plates-list">
+
+                <div class="plate">
+                    <div class="plate-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="./img/dish.png" class="dish-heart" alt="prato">
+                    <h3 class="plate-title">lorem</h3>
+                    <p class="plate-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                    <div class="plate-reviews">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span class="quantity-reviews">(200+)</span>
+                    </div>
+
+                    <div class="plate-price">
+                        <h4 class="price">R$50,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="plate">
+                    <div class="plate-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="./img/dish2.png" class="dish-heart" alt="prato">
+                    <h3 class="plate-title">lorem</h3>
+                    <p class="plate-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                    <div class="plate-reviews">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span class="quantity-reviews">(200+)</span>
+                    </div>
+
+                    <div class="plate-price">
+                        <h4 class="price">R$50,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="plate">
+                    <div class="plate-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="./img/dish3.png" class="dish-heart" alt="prato">
+                    <h3 class="plate-title">lorem</h3>
+                    <p class="plate-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                    <div class="plate-reviews">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span class="quantity-reviews">(200+)</span>
+                    </div>
+
+                    <div class="plate-price">
+                        <h4 class="price">R$60,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="plate">
+                    <div class="plate-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="./img/dish4.png" class="dish-heart" alt="prato">
+                    <h3 class="plate-title">lorem</h3>
+                    <p class="plate-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                    <div class="plate-reviews">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span class="quantity-reviews">(200+)</span>
+                    </div>
+
+                    <div class="plate-price">
+                        <h4 class="price">R$55,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+
             </div>
         </section>
     </main>
