section avaliations completed

--- a/index.html
+++ b/index.html
@@ -194,6 +194,74 @@
 
             </div>
         </section>
+
+        <section class="testimonials">
+
+            <img src="./img/chef.png" class="testimonials-chef" alt="chefe-de-cozinha">
+
+
+            <div class="testimonials-content">
+                <h2 class="testimonials-title">Avaliações</h2>
+                <h3 class="testimonials-subTitle">O que os clientes falam sobre nós</h3>
+
+                <div class="feedbakcs">
+                    <div class="feedback">
+                        <img src="./img/avatar.jpg" class="feedback-avatar" alt="person">
+                        <div class="feedback-content">
+                            <p class="name">Fulana
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p class="testimonial">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui minus
+                                dolorum unde, amet vitae "</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feedbakcs">
+                    <div class="feedback">
+                        <img src="./img/avatar.jpg" class="feedback-avatar" alt="person">
+                        <div class="feedback-content">
+                            <p class="name">Fulana
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p class="testimonial">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui minus
+                                dolorum unde, amet vitae "</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feedbakcs">
+                    <div class="feedback">
+                        <img src="./img/avatar.jpg" class="feedback-avatar" alt="person">
+                        <div class="feedback-content">
+                            <p class="name">Fulana
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p class="testimonial">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui minus
+                                dolorum unde, amet vitae "</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <button class="btn-default">Ver mais Avaliações</button>
+            </div>
+        </section>
     </main>
     <script src="./script.js"></script>
 </body>
