landing Page made - jus a few animations to go

--- a/index.html
+++ b/index.html
@@ -263,6 +263,27 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer-content">
+        <img src="./img/wave.svg" alt="wave-footer">
+
+        <div class="footer-items">
+            <span class="copyright"> &copy 2024 Alecsandro Sales</span>
+            <div class="social-medias-buttons">
+                <a href="https://wa.me/61995861805">
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+
+                <a href="https://www.instagram.com/__alecsandro/">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+
+                <a href="#">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
     <script src="./script.js"></script>
 </body>
 
